kubernetes/namespace/prod/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana.flowlog-stats.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
